added close buttons in JS

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 	<button class="popup-open popup-open_two">2</button>
 	<button class="popup-open popup-open_three">3</button>
     <div class="popup popup__one">
-      <div class="popup__close">x</div>
+		<div class="popup__close">x</div>
+		<p class="text__one">Carp</p>
     </div>
     <div class="popup popup__two">
-      <div class="popup__close">x</div>
+		<div class="popup__close">x</div>
+		<p class="text__two">Dinosaur</p>
     </div>
     <div class="popup popup__three">
-      <div class="popup__close">x</div>
+		<div class="popup__close">x</div>
+		<p class="text__three">Sergio</p>
     </div>
     <script src="script.js"></script>
   </body>
